--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "dotenv": "^16.1.4",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "@prisma/client": "^6.6.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.0",
+    "nodemon": "^3.1.10",
+    "pg": "^8.15.1",
+    "prisma": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.0",
-    "react-router-dom": "^6.12.1"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.30.0"
   }
 }
